# foundry-iq-sharepoint-agent

./: .gitignore  Dockerfile  README.md  agent_indexed_sharepoint.py  agent_remote_sharepoint.py  agent_sharepoint.py  agent_sharepoint_grounding.py  api_server.py  main.py  obo_token_provider.py  pyproject.toml  requirements.txt  sharepoint-knowledge-sources.http  sharepoint_context_provider.py
agents/: remote_sharepoint.py  sharepoint_agent.py
scripts/: create_hosted_agent_version.py  deploy_hosted_agent.sh
server/: api_server.py
