[project]
name = "foundry-iq-sharepoint-agent"
version = "0.1.0"
description = "Foundry IQ Agent for SharePoint file search with OBO flow"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-core[all]>=1.0.0rc4",
    "agent-framework-azure-ai>=1.0.0rc4",
    "agent-framework-azure-ai-search==1.0.0b260311",
    "azure-ai-agentserver-agentframework>=1.0.0b1",
    "azure-identity>=1.19.0",
    "azure-search-documents>=11.7.0b2",
    "azure-ai-projects>=2.0.0",
    "msal>=1.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.uv]
prerelease = "allow"
